# orion-benchmark

./: .gitignore  README.md  pyproject.toml
cost_of_orion/depth_benchmark/: README.md  Scarb.toml  mlp.ipynb  modular_mlp.ipynb
cost_of_orion/depth_benchmark/crates/layer1/src/: bias.cairo  weights.cairo
cost_of_orion/depth_benchmark/crates/layern/: Scarb.toml
cost_of_orion/depth_benchmark/crates/layern/src/: bias.cairo  weights.cairo
cost_of_orion/depth_benchmark/proofs/: zk_1.proof  zk_10.proof  zk_5.proof  zk_50.proof
cost_of_orion/depth_benchmark/saved_models/mlp_499/: fingerprint.pb  keras_metadata.pb
cost_of_orion/depth_benchmark/saved_models/mlp_499/variables/: variables.index
cost_of_orion/depth_benchmark/src/: functions.cairo  inference.cairo  input.cairo  lib.cairo  test.cairo
orion_benchmark/: cairo_compile.md  cairo_models.md  main.py  operator_analytics.py  operator_coverage.md  operator_coverage.py  operator_usage.md  operators_analytics.py  quant_operator_analytics.py  quant_operator_coverage.md  quant_operator_coverage.py  quant_operator_usage.md  supported_operator_list.py  supported_operatorr_list.py  transpile_models.py
